exports[`multiple fragments, uses \`fragmentName\` to pick > JSON schema > deserialized 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": [
    {
      "type": "object",
      "title": "Human",
      "properties": {
        "__typename": {
          "const": "Human"
        },
        "id": {
          "title": "Human.id: ID!",
          "type": "string"
        },
        "name": {
          "title": "Human.name: String!",
          "type": "string"
        },
        "fullName": {
          "title": "Human.fullName: String",
          "type": [
            "string",
            "null"
          ]
        },
        "born": {
          "title": "Human.born: Date!",
          "$ref": "#/$defs/scalar/Date"
        }
      },
      "required": [
        "__typename",
        "id",
        "name",
        "born"
      ]
    },
    {
      "type": "object",
      "title": "Droid",
      "properties": {
        "__typename": {
          "const": "Droid"
        },
        "id": {
          "title": "Droid.id: ID!",
          "type": "string"
        },
        "name": {
          "title": "Droid.name: String!",
          "type": "string"
        },
        "primaryFunction": {
          "title": "Droid.primaryFunction: String",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "__typename",
        "id",
        "name"
      ]
    }
  ],
  "$defs": {
    "scalar": {
      "Date": {
        "title": "Date",
        "description": "Unix timestamp in milliseconds",
        "type": "number"
      }
    }
  },
  "title": "fragment CharacterFragment on Character"
}
`;

exports[`multiple fragments, uses \`fragmentName\` to pick > JSON schema > serialized 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": [
    {
      "type": "object",
      "title": "Human",
      "properties": {
        "__typename": {
          "const": "Human"
        },
        "id": {
          "title": "Human.id: ID!",
          "type": "string"
        },
        "name": {
          "title": "Human.name: String!",
          "type": "string"
        },
        "fullName": {
          "title": "Human.fullName: String",
          "type": [
            "string",
            "null"
          ]
        },
        "born": {
          "title": "Human.born: Date!",
          "$ref": "#/$defs/scalar/Date"
        }
      },
      "required": [
        "__typename",
        "id",
        "name",
        "born"
      ]
    },
    {
      "type": "object",
      "title": "Droid",
      "properties": {
        "__typename": {
          "const": "Droid"
        },
        "id": {
          "title": "Droid.id: ID!",
          "type": "string"
        },
        "name": {
          "title": "Droid.name: String!",
          "type": "string"
        },
        "primaryFunction": {
          "title": "Droid.primaryFunction: String",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "__typename",
        "id",
        "name"
      ]
    }
  ],
  "$defs": {
    "scalar": {
      "Date": {
        "title": "Date",
        "description": "A date string in YYYY-MM-DD format",
        "type": "string",
        "pattern": "\\\\d{4}-\\\\d{1,2}-\\\\d{1,2}"
      }
    }
  },
  "title": "fragment CharacterFragment on Character"
}
`;

exports[`single fragment, picks only fragment > JSON schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "fragment HumanFragment on Human",
  "properties": {
    "__typename": {
      "const": "Human"
    },
    "id": {
      "title": "Human.id: ID!",
      "type": "string"
    },
    "name": {
      "title": "Human.name: String!",
      "type": "string"
    },
    "born": {
      "title": "Human.born: Date!",
      "$ref": "#/$defs/scalar/Date"
    }
  },
  "required": [
    "__typename",
    "id",
    "name",
    "born"
  ],
  "$defs": {
    "scalar": {
      "Date": {
        "title": "Date",
        "description": "A date string in YYYY-MM-DD format",
        "type": "string",
        "pattern": "\\\\d{4}-\\\\d{1,2}-\\\\d{1,2}"
      }
    }
  }
}
`;
